# STOCK-PRICE-PREDICTION-ANALYSIS

./: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
